--- a/subsystem-as7/modules/spring-3/pom.xml
+++ b/subsystem-as7/modules/spring-3/pom.xml
@@ -77,6 +77,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.2.2</version>
+        </dependency>
     </dependencies>
 
     <build>
