--- a/subsystem-as7/subsystem-as7/pom.xml
+++ b/subsystem-as7/subsystem-as7/pom.xml
@@ -38,16 +38,19 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
+            <version>3.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
+            <version>3.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>3.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -65,6 +68,12 @@
             <groupId>org.jboss.snowdrop</groupId>
             <artifactId>snowdrop-deployers</artifactId>
             <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+        	<groupId>cglib</groupId>
+        	<artifactId>cglib-nodep</artifactId>
+        	<version>2.2.2</version>
         </dependency>
     </dependencies>
 
