--- a/pom.xml
+++ b/pom.xml
@@ -461,6 +461,12 @@
                 <artifactId>jboss-as-connector</artifactId>
                 <version>${version.org.jboss.as7}</version>
             </dependency>
+            
+            <dependency>
+            	<groupId>cglib</groupId>
+            	<artifactId>cglib-nodep</artifactId>
+            	<version>2.2.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
