--- a/subsystem-as7/subsystem-as7/pom.xml
+++ b/subsystem-as7/subsystem-as7/pom.xml
@@ -38,19 +38,16 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>3.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>3.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>3.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -73,7 +70,7 @@
         <dependency>
         	<groupId>cglib</groupId>
         	<artifactId>cglib-nodep</artifactId>
-        	<version>2.2.2</version>
+        	<scope>import</scope>
         </dependency>
     </dependencies>
 
