--- a/subsystem-as7/subsystem-as7/pom.xml
+++ b/subsystem-as7/subsystem-as7/pom.xml
@@ -72,6 +72,11 @@
         	<artifactId>cglib-nodep</artifactId>
         </dependency>
         
+	    <dependency>
+	      <groupId>org.aspectj</groupId>
+	      <artifactId>aspectjrt</artifactId>
+	    </dependency>
+
     </dependencies>
 
     <build>
@@ -102,7 +107,22 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+		    </plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal><!-- to weave all your main classes -->
+							<goal>test-compile</goal><!-- to weave all your test classes -->
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -155,5 +175,40 @@
                 </executions>
             </plugin>
         </plugins>
+        <pluginManagement>
+        	<plugins>
+        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        		<plugin>
+        			<groupId>org.eclipse.m2e</groupId>
+        			<artifactId>lifecycle-mapping</artifactId>
+        			<version>1.0.0</version>
+        			<configuration>
+        				<lifecycleMappingMetadata>
+        					<pluginExecutions>
+        						<pluginExecution>
+        							<pluginExecutionFilter>
+        								<groupId>
+        									org.codehaus.mojo
+        								</groupId>
+        								<artifactId>
+        									aspectj-maven-plugin
+        								</artifactId>
+        								<versionRange>
+        									[1.4,)
+        								</versionRange>
+        								<goals>
+        									<goal>test-compile</goal>
+        								</goals>
+        							</pluginExecutionFilter>
+        							<action>
+        								<ignore></ignore>
+        							</action>
+        						</pluginExecution>
+        					</pluginExecutions>
+        				</lifecycleMappingMetadata>
+        			</configuration>
+        		</plugin>
+        	</plugins>
+        </pluginManagement>
     </build>
 </project>
