--- a/subsystem-as7/modules/spring-3.1/pom.xml
+++ b/subsystem-as7/modules/spring-3.1/pom.xml
@@ -86,7 +86,14 @@
     </dependencies>
 
     <build>
-        <plugins>
+        <plugins>        
+        	<plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -128,6 +135,8 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            
         </plugins>
 
     </build>
