--- a/subsystem-as7/subsystem-as7/pom.xml
+++ b/subsystem-as7/subsystem-as7/pom.xml
@@ -108,21 +108,7 @@
                     </execution>
                 </executions>
 		    </plugin>
-
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>aspectj-maven-plugin</artifactId>
-				<version>1.4</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>compile</goal><!-- to weave all your main classes -->
-							<goal>test-compile</goal><!-- to weave all your test classes -->
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
+		    
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -153,6 +139,47 @@
                     </dependency>
                 </dependencies>
             </plugin>
+            
+            <plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>aspectj-maven-plugin</artifactId>
+				<version>1.4</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.aspectj</groupId>
+						<artifactId>aspectjrt</artifactId>
+						<version>1.7.0</version>
+					</dependency>
+				</dependencies>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>       <!-- use this goal to weave all your main classes -->
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<showWeaveInfo>true</showWeaveInfo>
+					<weaveDirectories>
+						<weaveDirectory>
+						/home/yyz/tmehta/jboss-as-7.1.1.Final/modules/org/springframework/spring/snowdrop/spring-context.jar
+						</weaveDirectory>
+						<weaveDirectory>
+						/home/yyz/tmehta/jboss-as-7.1.1.Final/modules/org/springframework/spring/snowdrop/spring-expression.jar
+						</weaveDirectory>
+						<weaveDirectory>
+						/home/yyz/tmehta/jboss-as-7.1.1.Final/modules/org/springframework/spring/snowdrop/spring-beans.jar
+						</weaveDirectory>
+						<weaveDirectory>
+						/home/yyz/tmehta/jboss-as-7.1.1.Final/modules/org/springframework/spring/snowdrop/spring-core.jar
+						</weaveDirectory>
+						<weaveDirectory>
+						/home/yyz/tmehta/jboss-as-7.1.1.Final/modules/javax/el/api/main/jboss-el-api_2.2_spec-1.0.0.Final.jar
+						</weaveDirectory>						
+					</weaveDirectories>
+					<complianceLevel>1.6</complianceLevel>
+				</configuration>
+			</plugin>
 
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -175,40 +202,6 @@
                 </executions>
             </plugin>
         </plugins>
-        <pluginManagement>
-        	<plugins>
-        		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
-        		<plugin>
-        			<groupId>org.eclipse.m2e</groupId>
-        			<artifactId>lifecycle-mapping</artifactId>
-        			<version>1.0.0</version>
-        			<configuration>
-        				<lifecycleMappingMetadata>
-        					<pluginExecutions>
-        						<pluginExecution>
-        							<pluginExecutionFilter>
-        								<groupId>
-        									org.codehaus.mojo
-        								</groupId>
-        								<artifactId>
-        									aspectj-maven-plugin
-        								</artifactId>
-        								<versionRange>
-        									[1.4,)
-        								</versionRange>
-        								<goals>
-        									<goal>test-compile</goal>
-        								</goals>
-        							</pluginExecutionFilter>
-        							<action>
-        								<ignore></ignore>
-        							</action>
-        						</pluginExecution>
-        					</pluginExecutions>
-        				</lifecycleMappingMetadata>
-        			</configuration>
-        		</plugin>
-        	</plugins>
-        </pluginManagement>
+
     </build>
 </project>
