--- a/subsystem-as7/modules/spring-3/pom.xml
+++ b/subsystem-as7/modules/spring-3/pom.xml
@@ -100,7 +100,7 @@
                             <outputDirectory>${project.build.directory}/dependency/lib</outputDirectory>
                             <overWriteSnapshots>true</overWriteSnapshots>
                             <stripVersion>true</stripVersion>
-                            <includeGroupIds>org.springframework,org.jboss.snowdrop,aopalliance,org.aspectj</includeGroupIds>
+                            <includeGroupIds>org.springframework,org.jboss.snowdrop,aopalliance,org.aspectj,cglib</includeGroupIds>
                         </configuration>
                     </execution>
                 </executions>
