--- a/subsystem-as7/modules/spring-2.5/pom.xml
+++ b/subsystem-as7/modules/spring-2.5/pom.xml
@@ -106,13 +106,28 @@
 
                 <executions>
                     <execution>
-                        <id>make-module</id>
+                        <id>make-module-without-dep</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
                         <configuration>
                             <finalName>spring-2.5-module</finalName>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <attach>true</attach>
+                            <descriptors>
+                                <descriptor>${basedir}/src/main/assembly/spring-2.5-module-without-dep.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>make-module</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>spring-2.5-module-with-dep</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                             <attach>false</attach>
                             <descriptors>
