--- a/subsystem-as7/modules/spring-3.1/pom.xml
+++ b/subsystem-as7/modules/spring-3.1/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <artifactId>modules</artifactId>
         <groupId>org.jboss.snowdrop</groupId>
-        <version>2.0.5.Final-SNAPSHOT</version>
+        <version>2.0.4.Final</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -107,13 +107,28 @@
 
                 <executions>
                     <execution>
-                        <id>make-module</id>
+                        <id>make-module-without-dep</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
                         <configuration>
                             <finalName>spring-3.1-module</finalName>
+                            <appendAssemblyId>false</appendAssemblyId>
+                            <attach>true</attach>
+                            <descriptors>
+                                <descriptor>${basedir}/src/main/assembly/spring-3.1-module-without-dep.xml</descriptor>
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>make-module</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <finalName>spring-3.1-module-with-dep</finalName>
                             <appendAssemblyId>false</appendAssemblyId>
                             <attach>false</attach>
                             <descriptors>
